# Drone_Racing_BIT

./: .gitignore  .gitmodules  README.md
cad/: rsp_base.stl
cad/up-core/: PCBA-CORE-UP-106-08-03.easm
config/: kino_algorithm.xml  kino_replan_gazebo.launch
config/kalibr/: camchain-raspicam_image.yaml  results-raspicam_image.txt
config/kalibr_d435i/: camchain-imucam-homelinuxworkdatabag2020-10-14-13-48-40.yaml  results-imucam-homelinuxworkdatabag2020-10-14-13-48-40.txt
config/kalibr_d435i/camera/: camchain-homelinuxworkdata11111.yaml  results-cam-homelinuxworkdata11111.txt
config/kalibr_d435i_stereo/: camchain-imucam-homelinuxworkdatabag2020-10-21-08-53-46.yaml  results-imucam-homelinuxworkdatabag2020-10-21-08-53-46.txt
config/kalibr_d435i_stereo/camera/: camchain-homelinuxworkdatabag2020-10-20-19-28-18.yaml  results-cam-homelinuxworkdatabag2020-10-20-19-28-18.txt
config/realsense_d435i/: left.yaml  realsense_mono_imu_config.yaml  realsense_stereo_imu_config.yaml
realsense_d435i/: camera.yaml  right.yaml
scripts/: GuidanceLaw_static_suboptimal.m  train.ipynb
scripts/.ipynb_checkpoints/: train-checkpoint.ipynb
scripts/guidance_law/: guidance_law.slx  guidance_law.slxc  guidance_law_param.m
src/geometric_controller/include/geometric_controller/: geometric_controller.h
src/geometric_controller/launch/: empty_test.launch  mav_trajectory_track_circle.launch  sitl_trajectory_track_circle.launch  trajectory_controller.launch
src/geometric_controller/src/: geometric_controller.cpp
src/mavros_controllers/trajectory_generator/: CMakeLists.txt
src/mavros_controllers/trajectory_generator/src/: global_trajectory.cpp  minimum_snap_trajectories.cpp
src/px4_offb/: CMakeLists.txt  package.xml
src/px4_offb/include/px4_offb/: uav_control.h
src/px4_offb/launch/: mavros_posix_sitl.launch
src/px4_offb/scripts/: datashow.py  uav_keyboard_control.py
src/px4_offb/src/: odom2camerapose.cpp  save_data_node.cpp  uav.cpp  uav_control.cpp  vision_pose.cpp
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/raspicam/raspicam_node/include/: RaspiCamControl.h
src/raspicam/raspicam_node/launch/: camerav2_640x480_30fps.launch
src/raspicam/raspicam_node/src/: RaspiCamControl.cpp  (+1 more)
src/ring_detection/: CMakeLists.txt  package.xml
src/ring_detection/src/: ring_detection.cpp
src/rviz_simulation/gate_detection/: CMakeLists.txt  package.xml
src/rviz_simulation/gate_detection/include/: RapidTrajectoryGenerator.h  gate_detector.h  trajectory_generator.h
src/rviz_simulation/gate_detection/src/: gate_detector.cpp  gate_visulization_node.cpp  trajectory_generator.cpp
src/rviz_simulation/trajectory_generator/: CMakeLists.txt  package.xml
src/rviz_simulation/trajectory_generator/src/: trajectory_generator_node.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/gazebo_simulation/: CMakeLists.txt  package.xml
src/simulation/gazebo_simulation/config/: config_file.rviz
src/simulation/gazebo_simulation/launch/: dataset_collection.launch  empty_px4vision.launch  empty_test.launch  empty_test_.launch  geometric_controller.launch  indoor_px4vision.launch  indoor_race_track.launch  indoor_racetrack_fast.launch  mav_trajectory_track_circle.launch  obstable_test.launch  office_race_track.launch  posix_sitl.launch  sitl_trajectory_polynomial.launch  sitl_trajectory_track_lamniscate.launch  trajectory_controller.launch
src/simulation/gazebo_simulation/models/D435i/: D435i.sdf
src/simulation/gazebo_simulation/models/D435i_pose/: D435i_pose.sdf  model.config
src/simulation/gazebo_simulation/models/P300_uav1_mono/: P300_uav1_mono.sdf  model.config
src/simulation/gazebo_simulation/models/P300_uav2_mono/: P300_uav2_mono.sdf  model.config
src/simulation/gazebo_simulation/models/P300_uav3_mono/: P300_uav3_mono.sdf  model.config
src/simulation/gazebo_simulation/models/circle_gate/: circle_gate.sdf
src/simulation/gazebo_simulation/models/circle_gate/meshes/: circle_gate.stl
src/simulation/gazebo_simulation/models/circle_gate_race/: circle_gate_race.sdf  model.config
src/simulation/gazebo_simulation/models/circle_gate_race/meshes/: circle_gate_race.stl
src/simulation/gazebo_simulation/models/coffee_machine/meshes/: model.dae
src/simulation/gazebo_simulation/models/iris/: iris.sdf
src/simulation/gazebo_simulation/models/iris_Monocular_down/: iris_Monocular_down.sdf  model.config
src/simulation/gazebo_simulation/models/px4vision/: px4vision.sdf
src/simulation/gazebo_simulation/models/realsense_D435i/: model.config  realsense_D435i.sdf
src/simulation/gazebo_simulation/models/room/: model.config  model.sdf
src/simulation/gazebo_simulation/models/solo/: solo.sdf
src/simulation/gazebo_simulation/src/: dataset_collector_node.cpp
src/simulation/gazebo_simulation/worlds/: circuit.world  empty.world  indoor_race_track.world  obstacle.world  office_race_track.world  office_race_track_test.world  race_track.world
src/simulation/launch/: indoor_race_track.launch  posix_sitl.launch
src/simulation/models/solo/: solo.sdf
src/simulation/rviz_simulation/drone_planning/: CMakeLists.txt  package.xml
src/simulation/rviz_simulation/drone_planning/include/: trajectory_generator.h
src/simulation/rviz_simulation/drone_planning/src/: gate_detector.cpp
src/simulation/rviz_simulation/guidance_law/: CMakeLists.txt  package.xml
src/simulation/rviz_simulation/so3_quadrotor_simulator/: CMakeLists.txt
src/simulation/rviz_simulation/so3_quadrotor_simulator/config/: rviz.rviz
src/simulation/rviz_simulation/so3_quadrotor_simulator/launch/: simulator.launch
src/simulation/worlds/: indoor_race_track.world
src/trajectory_generator/: CMakeLists.txt  package.xml
src/trajectory_generator/include/drone_racing/: gazebo_rviz_visualizer.h
src/trajectory_generator/include/polynomial_trajectories/: minimum_snap_trajectories.h
src/trajectory_generator/include/quadrotor_common/: trajectory_point.h
src/trajectory_generator/src/: minimum_snap_circle.cpp  minimum_snap_office_node.cpp  minimum_snap_trajectories_node.cpp  trajectory_point.cpp
(+15 files in other folders)
