<?xml version="1.0"?>
<package>
  <name>drone_racing_simulation</name>
  <version>3.1.0</version>
  <description>the simulation pack for drone race</description>
  <maintainer email="lcyfly1@163.com">Colin Lee</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/DRC</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
    <run_depend>gazebo</run_depend>
</package>
