<?xml version="1.0"?>
<package format="2">
  <name>drone_racing_simulation</name>
  <version>0.0.0</version>
  <description>the simulation pack for drone race</description>
  <maintainer email="lcyfly1@163.com">Colin Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo</build_depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>camera_info_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
